[gd_scene load_steps=6 format=3 uid="uid://cphmtulivcicg"]

[ext_resource type="Script" path="res://screens/game/game_screen.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://dhold8ocsbk5t" path="res://widgets/small_button/small_button.tscn" id="2"]
[ext_resource type="PackedScene" path="res://containers/hand/hand.tscn" id="3"]
[ext_resource type="PackedScene" path="res://containers/token_grid/token_grid.tscn" id="4"]
[ext_resource type="Texture2D" uid="uid://wdfjux8qypsb" path="res://screens/game/mana_point.png" id="6"]

[node name="GameScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.45098, 0.509804, 0.701961, 1)

[node name="DeckZone" type="ColorRect" parent="."]
custom_minimum_size = Vector2(80, 80)
layout_mode = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -510.0
offset_top = -130.0
offset_right = -410.0
offset_bottom = -50.0
color = Color(0.917647, 0.890196, 0.521569, 1)

[node name="DrawCount" type="Label" parent="DeckZone"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 32
text = "0"

[node name="DrawBtn" type="Button" parent="DeckZone"]
layout_mode = 0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 6.0
offset_bottom = 35.0
text = "Draw"

[node name="DiscardZone" type="ColorRect" parent="."]
custom_minimum_size = Vector2(80, 80)
layout_mode = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 410.0
offset_top = -130.0
offset_right = 510.0
offset_bottom = -50.0
color = Color(0.917647, 0.890196, 0.521569, 1)

[node name="DiscardCount" type="Label" parent="DiscardZone"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 32
text = "0"

[node name="ReshuffleBtn" type="Button" parent="DiscardZone"]
layout_mode = 0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 6.0
offset_bottom = 35.0
disabled = true
text = "Reshuffle"

[node name="PlayZone" type="ColorRect" parent="."]
custom_minimum_size = Vector2(300, 300)
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
color = Color(0.14902, 0.172549, 0.239216, 1)

[node name="TokenGrid" parent="PlayZone" instance=ExtResource("4")]
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0
in_anchor = NodePath("../TokenInOut")
out_anchor = NodePath("../TokenInOut")

[node name="TokenInOut" type="Control" parent="PlayZone"]
anchors_preset = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
scale = Vector2(1e-05, 1e-05)

[node name="ManaBar" type="HBoxContainer" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -330.0
offset_top = -210.0
offset_right = 330.0
offset_bottom = -155.0
alignment = 1

[node name="Title" type="Label" parent="ManaBar"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 24
text = "Mana  "

[node name="Mana1" type="TextureRect" parent="ManaBar"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("6")
expand_mode = 1
stretch_mode = 6

[node name="Mana2" type="TextureRect" parent="ManaBar"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("6")
expand_mode = 1
stretch_mode = 6

[node name="Mana3" type="TextureRect" parent="ManaBar"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("6")
expand_mode = 1
stretch_mode = 6

[node name="Mana4" type="TextureRect" parent="ManaBar"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("6")
expand_mode = 1
stretch_mode = 6

[node name="Mana5" type="TextureRect" parent="ManaBar"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("6")
expand_mode = 1
stretch_mode = 6

[node name="Mana6" type="TextureRect" parent="ManaBar"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("6")
expand_mode = 1
stretch_mode = 6

[node name="Mana7" type="TextureRect" parent="ManaBar"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("6")
expand_mode = 1
stretch_mode = 6

[node name="Mana8" type="TextureRect" parent="ManaBar"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("6")
expand_mode = 1
stretch_mode = 6

[node name="Mana9" type="TextureRect" parent="ManaBar"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("6")
expand_mode = 1
stretch_mode = 6

[node name="Mana10" type="TextureRect" parent="ManaBar"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("6")
expand_mode = 1
stretch_mode = 6

[node name="EndTurnBtn" parent="ManaBar" instance=ExtResource("2")]
custom_minimum_size = Vector2(175, 55)
layout_mode = 2
text = "End turn"

[node name="HandZone" type="ColorRect" parent="."]
custom_minimum_size = Vector2(800, 160)
layout_mode = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -400.0
offset_top = -160.0
offset_right = 400.0
color = Color(0.239216, 0.286275, 0.439216, 1)

[node name="HandContainer" parent="HandZone" instance=ExtResource("3")]
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0
in_anchor = NodePath("../HandInAnchor")
out_anchor = NodePath("../HandOutAnchor")

[node name="HandInAnchor" type="Control" parent="HandZone"]
anchors_preset = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
rotation = 45.0
scale = Vector2(1e-05, 1e-05)

[node name="HandOutAnchor" type="Control" parent="HandZone"]
anchors_preset = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
rotation = 90.0
scale = Vector2(1e-05, 1e-05)

[node name="EffectsLayout" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0

[node name="Title" type="Label" parent="EffectsLayout"]
layout_mode = 2
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
text = "Effects"

[node name="FilterTitle" type="Label" parent="EffectsLayout"]
layout_mode = 2
text = "Apply to:"

[node name="FilterLayout" type="HBoxContainer" parent="EffectsLayout"]
layout_mode = 2

[node name="DrawFilter" type="CheckBox" parent="EffectsLayout/FilterLayout"]
layout_mode = 2
text = "Draw"

[node name="HandFilter" type="CheckBox" parent="EffectsLayout/FilterLayout"]
layout_mode = 2
text = "Hand"

[node name="DiscardFilter" type="CheckBox" parent="EffectsLayout/FilterLayout"]
layout_mode = 2
text = "Discard"

[node name="ManaMultiplier" type="CheckButton" parent="EffectsLayout"]
layout_mode = 2
text = "Common mana x2"

[node name="OnPlayedEffect" type="CheckButton" parent="EffectsLayout"]
layout_mode = 2
text = "Mana +1 on played"

[node name="ManaIncrease" type="Button" parent="EffectsLayout"]
layout_mode = 2
text = "Mana +1"

[node name="ManaDecrease" type="Button" parent="EffectsLayout"]
layout_mode = 2
text = "Mana -1"

[node name="MenuBtn" parent="." instance=ExtResource("2")]
custom_minimum_size = Vector2(0, 0)
layout_mode = 0
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_right = 0.0
offset_bottom = 108.0
text = "Back to menu"

[node name="StartingHandDelay" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[connection signal="pressed" from="DeckZone/DrawBtn" to="." method="_on_DrawBtn_pressed"]
[connection signal="pressed" from="DiscardZone/ReshuffleBtn" to="." method="_on_ReshuffleBtn_pressed"]
[connection signal="card_clicked" from="PlayZone/TokenGrid" to="." method="_on_TokenGrid_card_clicked"]
[connection signal="card_dropped" from="PlayZone/TokenGrid" to="." method="_on_TokenGrid_card_dropped"]
[connection signal="pressed" from="ManaBar/EndTurnBtn" to="." method="_on_EndTurnBtn_pressed"]
[connection signal="toggled" from="EffectsLayout/ManaMultiplier" to="." method="_on_ManaMultiplier_toggled"]
[connection signal="pressed" from="EffectsLayout/ManaIncrease" to="." method="_on_ManaIncrease_pressed"]
[connection signal="pressed" from="EffectsLayout/ManaDecrease" to="." method="_on_ManaDecrease_pressed"]
[connection signal="pressed" from="MenuBtn" to="." method="_on_MenuBtn_pressed"]
[connection signal="timeout" from="StartingHandDelay" to="." method="_on_StartingHandDelay_timeout"]
